--- a/src/app/pages/hadith/hadith.component.scss
+++ b/src/app/pages/hadith/hadith.component.scss
@@ -1,90 +1,114 @@
-main{
+main {
   padding: 50px;
   height: 100%;
   overflow-y: auto;
   padding-top: 20px;
-
-  @media (max-width: 768px) {
-    padding: 0 0 120px 0;
-  }
   
+
   &::-webkit-scrollbar {
     width: 5px;
   }
-    &::-webkit-scrollbar-track {
-    background: #fbfbfb; 
+  &::-webkit-scrollbar-track {
+    background: #fbfbfb;
   }
-    &::-webkit-scrollbar-thumb {
-    background: #cbc2bd; 
-      border-radius:10px;
+  &::-webkit-scrollbar-thumb {
+    background: #cbc2bd;
+    border-radius: 10px;
   }
   &::-webkit-scrollbar-thumb:hover {
-    
-    background: #fbfbfb; 
-  } 
-  
+    background: #fbfbfb;
+  }
+
   .hadith-wrapper {
     font-family: Montserrat, sans-serif;
-  
+
     @media (max-width: 768px) {
       padding: 10px;
     }
-  
+
     audio {
       display: none;
     }
-  
+
     .hadith-content {
       position: relative;
       width: 75%;
       margin: 0 auto;
       text-align: center;
-  
+
       @media (max-width: 768px) {
         width: 100%;
       }
-  
+
+      .arrows {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 20px;
+
+        span {
+          margin: 0 5px;
+        }
+
+        i {
+          cursor: pointer;
+          border-radius: 50%;
+          padding: 3px;
+          background: #2b2b4e;
+          color: white;
+        }
+      }
+
+      .icons {
+        i {
+          cursor: pointer;
+          border-radius: 50%;
+          padding: 7px;
+          font-size: 16px;
+          background: #2b2b4e;
+          color: white;
+        }
+      }
+
       .form-group {
         display: inline-block;
         margin-right: 15px;
-  
+
         label {
           margin-right: 5px;
         }
       }
-  
+
       .hadith {
         margin-bottom: 50px;
-  
+
         .sentence {
           display: inline-block;
           cursor: pointer;
           transition: all 0.5s;
           margin: 5px;
-  
+
           &.active {
             color: rgb(0, 102, 255);
-            background: #cebeba24;
           }
-  
+
           &:hover {
             color: #3361a6;
-            background: #cebeba24;
           }
         }
-  
+
         .icons {
           min-height: 40px;
-  
+
           img {
             cursor: pointer;
           }
         }
 
-        .translation{
+        .translation {
           font-size: 20px;
         }
-  
+
         .arabic {
           margin-bottom: 30px;
           direction: rtl;
@@ -93,5 +117,3 @@ main{
     }
   }
 }
-
-
