--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -1,6 +1,20 @@
 #sidenav-main{
   background-color: #1f1f2d !important;
 
+  &::-webkit-scrollbar {
+    width: 3px;
+  }
+  &::-webkit-scrollbar-track {
+    background: #fbfbfb;
+  }
+  &::-webkit-scrollbar-thumb {
+    background: #a8a6a6;
+    border-radius: 10px;
+  }
+  &::-webkit-scrollbar-thumb:hover {
+    background: #fbfbfb;
+  }
+  
   .navbar-nav{
     .nav-link{
       color: white !important;
