--- a/src/app/layouts/admin-layout/admin-layout.component.html
+++ b/src/app/layouts/admin-layout/admin-layout.component.html
@@ -4,6 +4,6 @@
   <!-- Pages -->
   <router-outlet></router-outlet>
   <div class="container-fluid">
-    <app-footer></app-footer>
+    <!--<app-footer></app-footer>-->
   </div>
 </div>
