--- a/src/app/pages/hadith/hadith.component.scss
+++ b/src/app/pages/hadith/hadith.component.scss
@@ -1,8 +1,7 @@
 main {
-  padding: 50px;
+  padding: 20px 50px 0px;
   height: 100%;
   overflow-y: auto;
-  padding-top: 20px;
   
 
   &::-webkit-scrollbar {
@@ -40,23 +39,14 @@ main {
         width: 100%;
       }
 
-      .arrows {
+      .arrows, .btn{
         display: flex;
         justify-content: center;
         align-items: center;
-        font-size: 20px;
+      }
 
-        span {
-          margin: 0 5px;
-        }
-
-        i {
-          cursor: pointer;
-          border-radius: 50%;
-          padding: 3px;
-          background: #2b2b4e;
-          color: white;
-        }
+      .arrows{
+        margin-top: 50px;
       }
 
       .icons {
