--- a/src/assets/scss/core/footers/_footer.scss
+++ b/src/assets/scss/core/footers/_footer.scss
@@ -7,7 +7,7 @@
 
 .footer {
     background: $footer-bg;
-    padding: $footer-padding-y $footer-padding-x;
+    padding-bottom: 10px;
 
     .col-footer {
         .heading {
