--- a/src/app/pages/hadith/hadith.component.scss
+++ b/src/app/pages/hadith/hadith.component.scss
@@ -3,6 +3,9 @@ main {
   height: 100%;
   overflow-y: auto;
   
+  @media(max-width: 768px){
+    padding: 20px 0px 0px 0px;
+  }
 
   &::-webkit-scrollbar {
     width: 5px;
