--- a/src/app/pages/hadith/hadith.component.html
+++ b/src/app/pages/hadith/hadith.component.html
@@ -6,9 +6,11 @@
       <ng-container *ngFor="let hadith of hadithService.hadiths">
         <div *ngIf=" hadith.id == hadithService.activeHadithId" class="hadith">
 
-          <div class="title">
+          <div class="title arrows">
+            <button class="btn d-flex" (click)="hadithService.previousHadith()"><i class="ni ni-bold-left"></i></button>
             <h1 *ngIf="languageService.isBosnian">{{hadith.id}}. {{hadith.bosnianTitle}}</h1>
             <h1 *ngIf="languageService.isEnglish">{{hadith.id}}. {{hadith.englishTitle}}</h1>
+            <button class="btn d-flex" (click)="hadithService.nextHadith()"><i class="ni ni-bold-right"></i></button>
           </div>
 
           <div class="icons">
