--- a/src/app/pages/hadith/hadith.component.scss
+++ b/src/app/pages/hadith/hadith.component.scss
@@ -35,6 +35,13 @@ main {
     background: #fbfbfb;
   }
 
+  .language-dropdown{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    border-radius: 4px;
+  }
+
   .hadith-wrapper {
     font-family: Montserrat, sans-serif;
 
